# persian-encoder

./: .gitignore  README.md  pyproject.toml
persian_encoder/: __init__.py  cli.py  codec.py  database.py  large_words.py  packing.py  seed_words.py  utils.py
persian_encoder/data/: hazm_words.tsv  priority_words.tsv  seed_words.txt
scripts/: build_channel_priority_wordbank.py  build_hazm_wordbank.py  dedupe_wordbanks.py  extract_channel_words.py
tests/: test_codec.py
